<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <AutoCompleteTextView
        android:id="@+id/testapp_mobile_autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/testapp_autocomplete" />

    <Spinner
        android:id="@+id/testapp_mobile_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/testapp_normalbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testapp_button" />

    <Button
        android:id="@+id/testapp_callingbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testapp_callingbutton" />

    <Button
        android:id="@+id/testapp_customlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testapp_customlist" />

    <Button
        android:id="@+id/testapp_databasecall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_sql_lite_database" />

    <Button
        android:id="@+id/testapp_asynctask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_async" />

    <Button
        android:id="@+id/testapp_gcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_gcm_" />    

</LinearLayout>