<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/title_activity_sql_lite_database"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp" />

    <LinearLayout
        android:id="@+id/inside_text_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/testapp_erno"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/testapp_erno"
            android:inputType="number" />

        <EditText
            android:id="@+id/testapp_firstname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/testapp_firstname"
        />

        <EditText
            android:id="@+id/testapp_middlename"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/testapp_middlename" />

        <EditText
            android:id="@+id/testapp_lastname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/testapp_lastname" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inside_text_layout"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/testapp_insert"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testapp_data_insert" />

        <Button
            android:id="@+id/testapp_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testapp_data_delete" />

        <Button
            android:id="@+id/testapp_update"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testapp_data_update" />
    </LinearLayout>

</RelativeLayout>